more alignment fixes

--- a/bleach.fish/src/index.css
+++ b/bleach.fish/src/index.css
@@ -3,7 +3,7 @@
   background-color: black;
 }
 
-html, body {
+body {
   margin: 2em;
   overflow: hidden;
   background-color: black;
@@ -131,12 +131,23 @@ a {
 }
 
 
-.song-grid {
-  padding: 20px;
+.wrapper {
+  left: 40px;
+  top: 40px;
+  position: fixed;
 }
 
-
 @media (max-width: 668px) {
+
+  .wrapper {
+    padding: 25px;
+    position: static;
+  }
+
+  .back-button {
+    left: 25px;
+  }
+
   .track-container {
     flex-direction: column;
     align-items: center;
@@ -147,7 +158,7 @@ a {
     display: flex;
     justify-content: center;
     align-items: center;
-    height: 100dvh;
+    height: 100svh;
     flex-direction: column;  /* Stack items vertically */
 
   }
@@ -155,7 +166,7 @@ a {
     display: flex;
     justify-content: center;
     align-items: center;
-    height: 100dvh;
+    height: 100svh;
   }
 
   .cover-static {
